--- a/style.css
+++ b/style.css
@@ -204,4 +204,62 @@
 
 
 
- 
+ /* popup style  */
+#overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+}
+
+#popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+    min-width: 300px;
+}
+
+.popup-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 15px;
+}
+.popup-content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.popup-content p{
+  font-size: 1.2rem;
+  color: #EF7722;
+}
+.popup-content h5{
+  font-size: 2.5rem;
+  color: #EF7722;
+  margin: 0.5rem 0px;
+}
+.close-btn {
+    font-size: 24px;
+    cursor: pointer;
+    color: #aaa;
+    border: none;
+}
+
+.close-btn:hover {
+    color: #333;
+}
+
+.hidden {
+    display: none;
+}
